# swxs-productor

./: LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: release.yml  test-release.yml
examples/abc/: animal.py  cat.py  dog.py
examples/protocol/: __init__.py  animal.py  cat.py  dog.py
examples/subclass/: animal.py  cat.py  dog.py
productor/: __init__.py  __version__.py  productor.py
